@@ -652,6 +652,7 @@ wxMSW:
 - Add wxIcon::CreateFromHICON() (troelsk).
 - Improve wxCURSOR_RIGHT_ARROW appearance (DoltAlya).
 - Generate menu highlight events for popup menus in wxDialog (Sam Partington).
+- Return more native shell icons from wxArtProvider (Markus Juergens).
 
 wxOSX/Cocoa:
 
